# project_hub

./: README.md  pyproject.toml
project_hub/: hooks.py  install.py  modules.txt  overrides.py
project_hub/project_hub/custom/: contact.json  customer.json  lead.json  meeting.json  project.json  project_update.json
project_hub/project_hub/doctype/appointment_table/: appointment_table.json  appointment_table.py
project_hub/project_hub/doctype/meeting_table/: meeting_table.json  meeting_table.py
